<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle">

    <RelativeLayout
        android:id="@+id/menuLayout_topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp">

        <Button
            android:id="@+id/menuLayout_btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:padding="@dimen/btn_padding"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="28dp"
            android:background="@drawable/arrow"
            android:elevation="10dp"
            />

        <TextView
            android:id="@+id/menuLayout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/nevis"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="12pt"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/menuLayout_textMsg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12pt"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_text_title" />


    <TextView
        android:id="@+id/menuLayout_btnRating"
        style="@style/BtnSettings"
        android:text="@string/menu_text_desc_serv"/>
    <View
        android:id="@+id/menuLayout_border1"
        android:layout_width="match_parent"
        android:background="@color/white_alpha"
        android:layout_height="1dp" />


    <AutoCompleteTextView
        android:id="@+id/menuLayout_ACTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/setLay_select_server"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:completionThreshold="0"
        android:dropDownAnchor="@id/menuLayout_border2"
        android:dropDownWidth="wrap_content"
        android:gravity="center_horizontal"/>

    <View
        android:id="@+id/menuLayout_border2"
        android:layout_width="match_parent"
        android:background="@color/white_alpha"
        android:layout_height="1dp" />


</LinearLayout>